# server

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Exofile  Jenkinsfile  dns-rules.yml
.github/workflows/: build.yml  publish_release.yml
ci/: gcs.json
crates/: Cargo.toml
crates/api/: Cargo.toml
crates/api/src/: elasticsearch.rs  http.rs  main.rs  mongodb.rs  redis_assistant_client.rs  redis_client.rs  redis_sessions_client.rs  service.rs  statistics.rs  termination.rs
crates/api/src/service/: auth.rs  cache.rs  gw_invalidations.rs  health.rs  mod.rs  regions.rs  requests.rs
crates/assistant/: Cargo.toml
crates/assistant/src/: clickhouse.rs  elasticsearch.rs  http.rs  kafka.rs  main.rs  presence.rs  reporting.rs  statistics.rs  termination.rs
crates/assistant/src/webapp/: mod.rs
crates/commiter/: Cargo.toml
crates/commiter/src/: elasticsearch.rs  http.rs  kafka.rs  main.rs  reporting.rs  statistics.rs
crates/common/: Cargo.toml
crates/common/src/: assistant.rs  crypto.rs  director.rs  dns_rules.rs  health.rs  lib.rs  logging.rs  presence.rs  prometheus.rs  termination.rs  transformer.rs  url_prefix.rs
crates/common/src/clap/: autocompletion.rs  dns_rules.rs  int_api.rs  log.rs  mod.rs  sentry.rs  threads.rs  webapp.rs
crates/common/src/geoip/: clap.rs  mod.rs  model.rs
crates/common/src/kafka/: clap.rs  mod.rs  statistics.rs  topics.rs
crates/common/src/statistics/: jemalloc.rs  mod.rs
crates/director/: Cargo.toml
crates/director/src/: balancer.rs  forwarder.rs  int_api_client.rs  main.rs  statistics.rs  termination.rs  tls.rs
crates/director/src/dns_server/: authority.rs  mod.rs
crates/dns/: Cargo.toml
crates/dns/src/: assistant.rs  authority.rs  catalog.rs  cdn_zone.rs  ecs.rs  int_api_client.rs  main.rs  net_zone.rs  rules_processor.rs  server.rs  short_zone.rs  statistics.rs  termination.rs
crates/gateway/: Cargo.toml  Dockerfile  Jenkinsfile
crates/gateway/certs/: nginx.conf
crates/gateway/certs/client/: ca.crt  ca.key  user.crt  user.csr  user.key  user.pfx
crates/gateway/certs/server/: gen.sh  localhost.crt  localhost.csr  localhost.key  localhost.key.org
crates/gateway/src/: chain.rs  dbip.rs  int_server.rs  joined_io.rs  main.rs  mime_helpers.rs  notification_listener.rs  public_hyper_client.rs  public_metered_hyper_client.rs  registry.rs  reports_saver.rs  resources.rs  rules_counter.rs  statistics.rs  stop_reasons.rs  transformer.rs
crates/gateway/src/cache/: mod.rs
crates/gateway/src/clients/: mod.rs  registry.rs  signaling.rs  traffic_counter.rs  tunnel.rs
crates/gateway/src/config/: handler.rs  mod.rs  static_response.rs
crates/gateway/src/environments/: mod.rs  scheme.rs
crates/gateway/src/http_serve/: acme.rs  compression.rs  config_response.rs  director.rs  handle.rs  health_checks.rs  helpers.rs  identifier.rs  logging.rs  mod.rs  proxy.rs  request.rs  request_processor.rs  tempfile_stream.rs  templates.rs
crates/gateway/src/http_serve/auth/: github.rs  google.rs  mod.rs
crates/gateway/src/http_serve/cache/: cache_scope.rs  dir.rs  mapped_files.rs  mod.rs
crates/gateway/src/http_serve/requests_processor/: application_firewall.rs  auth.rs  cache.rs  gcs_bucket.rs  helpers.rs  macros.rs  mod.rs  modifications.rs  pass_through.rs  post_processing.rs  proxy.rs  proxy_public.rs  refinable.rs  resolved_proxy.rs  s3_bucket.rs  static_dir.rs
crates/gateway/src/http_serve/requests_processor/utils/: ws.rs
crates/gateway/src/url_mapping/: catcher.rs  client.rs  handlers.rs  mapping.rs  mod.rs  notification_listener.rs  rate_limiter.rs  registry.rs  targets.rs  url_prefix.rs
crates/gateway/src/urls/: match_pattern.rs  matchable_url.rs  matched.rs  mod.rs
crates/gateway/src/webapp/: mod.rs
crates/gateway/templates/: access-denied.html.handlebars  limit-reached.html.handlebars  login.html.handlebars
crates/signaler/: Cargo.toml
crates/signaler/src/: main.rs  presence.rs  statistics.rs  termination.rs
crates/signaler/src/http/: private.rs  public.rs
crates/transformer/: Cargo.toml  gcs-key.json
crates/transformer/src/: api.rs  bucket.rs  db.rs  helpers.rs  magick.rs  main.rs  processor.rs  statistics.rs  termination.rs  webapp.rs
crt/: tls.crt  tls.key
custom-lifecycle-scripts/helpers/: current_version.sh  update_version.sh
