[workspace]
members = [
 "common",
 "api",
 "gateway",
 "dns",
 "signaler",
 "assistant",
 "director",
 "transformer",
 "commiter",
]

[profile.release]
lto = true

[profile.dev]
split-debuginfo = "unpacked"

[patch.crates-io]
#https://github.com/mongodb/bson-rust/pull/257
bson = { git = 'https://github.com/vkill/bson-rust.git', branch = "fix-dt"}
