[package]
name = "exogress-api"
version = "0.10.1"
authors = ["Gleb Pomykalov <gleb@exogress.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
bson = "2.0.0-beta"
chrono = { version = "0.4.11", features = ["serde"] }
clap = "2.33.3"
elasticsearch = { version = "7.12.0-alpha.1", default-features = false, features = ["rustls-tls"]}
futures = "0.3.5"
jsonwebtoken = { version = "7.2.0" }
hashbrown = { version = "0.11", features = ["serde"] }
itertools = "0.10"
lazy_static = "1.4.0"
jemallocator = "0.3.2"
mongodb = "2.0.0-beta"
pin-project = "1.0"
prometheus = "0.12.0"
rand = { version = "0.8" }
redis = {version = "0.20", default-features = false, features = ["tokio", "tokio-comp", "connection-manager"]}
reqwest = { version = "0.11", features = ["rustls-tls", "json", "trust-dns", "stream", "gzip", "brotli"], default-features = false }
rustls = "0.19"
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow", "contexts", "rustls", "reqwest"], default-features=false }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.48"
shadow-clone = "1.2.1"
stop-handle = "0.1"
thiserror = "1.0.13"
tokio = { version = "1.0", features = ["net", "time", "signal", "fs", "rt-multi-thread", "parking_lot"] }
tracing = "0.1"
tracing-futures = "0.2.4"
tracing-subscriber = "0.2"
trust-dns-resolver = "0.20"
url = "2.1.1"
warp = { version = "0.3" }
typed-builder = "0.9.0"
bs58 = "0.4"

exogress-server-common = { path = "../common" }
exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.1.0", features = ["common-utils", "entities", "access-tokens"], default-features = false }
