[package]
name = "exogress-assistant"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["net", "time", "signal", "fs", "rt-multi-thread"] }
futures = "0.3.5"
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"] }
thiserror = "1.0.13"
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow"] }
rand = { version = "0.8" }
stop-handle = "0.1"
pin-project = "1.0"
redis = {version = "0.19.0", default-features = false, features = ["tokio", "tokio-comp", "connection-manager"]}
clap = "2.33.3"
anyhow = "1.0.31"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
hashbrown = { version = "0.9", features = ["serde"] }
chrono = { version = "0.4.11", features = ["serde"] }
url = "2.1.1"
bson = "1.1.0"
tokio-stream = "0.1.2"
prometheus = "0.11.0"
lazy_static = "1.4.0"
mimalloc = "0.1.22"
simd-json = "0.3.23"

elasticsearch =  { version = "7.10.1-alpha.1", default-features = false, features = ["rustls-tls"]}
mongodb = "2.0.0-alpha"

trust-dns-resolver = "0.20"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "trust-dns", "stream", "gzip", "brotli"] }
warp = { version = "0.3" }

exogress-server-common = { path = "../common" }
exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.0.1-beta", features = ["common-utils", "entities"], default-features = false }
