[package]
name = "exogress-commiter"
version = "0.10.2"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["net", "time", "signal", "fs", "rt-multi-thread", "parking_lot"] }
futures = "0.3.5"
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"] }
serde_yaml = "0.8.17"
thiserror = "1.0.13"
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow", "contexts", "rustls", "reqwest"], default-features=false }
rand = { version = "0.8" }
stop-handle = "0.1"
pin-project = "1.0"
clap = "2.33.3"
anyhow = "1.0.31"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
hashbrown = { version = "0.11", features = ["serde"] }
chrono = { version = "0.4.11", features = ["serde"] }
url = "2.1.1"
prometheus = "0.12.0"
lazy_static = "1.4.0"
jemallocator = "0.3.2"
itertools = "0.10"
rustls = "0.19"
bson = "2.0.0-beta"
elasticsearch =  { version = "7.12.0-alpha.1", default-features = false, features = ["rustls-tls"]}
mongodb = "2.0.0-beta"
rdkafka = { version = "0.25", features = ["cmake-build"] }
warp = "0.3"
trust-dns-resolver = "0.20"

exogress-server-common = { path = "../common" }
exogress-common = { git = "https://github.com/exogress/exogress.git", rev = "22d9d7407558631f794052f09b44251fa9fcd833", version = "0.1.0", features = [], default-features = false }
