[package]
name = "exogress-server-common"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@lancastr.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
sentry = { version = "0.21.0", features = ["backtrace", "panic", "anyhow"] }
tracing = "0.1"
url = "2.1.1"
serde = { version = "1.0.105", features = ["derive"] }
chrono = { version = "0.4.15", features = ["serde"] }
thiserror = "1.0.20"
serde_json = "1.0.48"
http = "0.2.1"
tracing-gelf = { path = "../../deps/tracing-gelf", features = ["tokio-rustls"] }
tokio-rustls = "0.22"
rustls-native-certs = "0.5"
anyhow = "1.0.34"
tracing-subscriber = "0.2.11"
futures = "0.3"

trust-dns-resolver = "0.20"

exogress-common = { path = "../../deps/exogress", version = "0.0.1-beta", features = ["entities"], default-features = false }
