[package]
name = "exogress-server-common"
version = "0.3.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow"] }
tracing = "0.1"
url = "2.1.1"
serde = { version = "1.0.105", features = ["derive", "rc"] }
chrono = { version = "0.4.15", features = ["serde"] }
thiserror = "1.0.20"
serde_json = "1.0.48"
http = "0.2.1"
tracing-gelf = { git = "https://github.com/glebpom/tracing-gelf.git", branch="tokio-1.0", features = ["tokio-rustls"] }
tokio-rustls = "0.22"
rustls-native-certs = "0.5"
anyhow = "1.0.34"
tracing-subscriber = "0.2.11"
futures = "0.3"
hashbrown = "0.9.1"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "trust-dns"] }
urlencoding = "1.1.1"
lazy_static = "1.4.0"
serde_with = "1.6"
parking_lot = { version = "0.11", features = ["serde"] }
langtag = { git = "https://github.com/glebpom/langtag.git", branch = "master" }

trust-dns-resolver = "0.20"

exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.0.1-beta", features = ["entities", "config-core", "signaling"], default-features = false }
