[package]
name = "exogress-server-common"
version = "0.11.1"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow", "contexts", "rustls", "reqwest"], default-features=false }
tracing = "0.1"
url = "2.1.1"
serde = { version = "1.0.105", features = ["derive", "rc"] }
chrono = { version = "0.4.15", features = ["serde"] }
thiserror = "1.0.20"
serde_json = "1.0.48"
http = "0.2.1"
tracing-gelf = { git = "https://github.com/glebpom/tracing-gelf.git", branch = "tokio-1.0", features = ["tokio-rustls"] }
tokio-rustls = "0.22"
rustls-native-certs = "0.5"
anyhow = "1.0.34"
tracing-subscriber = "0.2.11"
futures = "0.3"
sha2 = "0.9"
hashbrown = "0.11"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "trust-dns"], default-features = false }
urlencoding = "1.1.1"
lazy_static = "1.4.0"
serde_with = "1.6"
parking_lot = { version = "0.11", features = ["serde"] }
language-tags = "0.3.2"
sodiumoxide = { version = "0.2.6", optional = true }
tokio-util = { version = "0.6", features = ["io"], optional = true }
tokio = { version = "1.0", optional = true }
async-stream = { version = "0.3.0", optional = true }
hyper = { version = "0.14.5", features = ["stream"] }
mime_guess = "2.0.3"
percent-encoding = "2.1.0"
futures-util = "0.3.14"
trust-dns-resolver = "0.20"
bytes = "1.0.1"
rand = "0.8.3"
mime = "0.3.16"
http-serde = "1.0.1"
typed-headers = { git = "https://github.com/glebpom/typed-headers.git", branch = "master" }
maxminddb = { version = "0.17.0", features = ["mmap"], optional = true }
memmap = { version = "0.7.0", optional = true }
smol_str = { version = "0.1.17", features = ["serde"] }
rust_decimal = { version = "1.13", features = ["serde-float"] }
rust_decimal_macros = "1.13"
jemalloc-ctl = "0.3.3"
thread-id = "4.0.0"

exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.2.0", features = ["entities", "config-core", "signaling", "common-utils"], default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "test-util"] }

[features]
crypto = ["sodiumoxide", "tokio-util", "tokio", "async-stream"]
geoip = ["maxminddb", "memmap"]
