[package]
name = "exogress-director"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@exogress.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
clap = "2.33.3"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "signal", "tcp", "time"] }
futures = "0.3"
sentry = "0.21.0"
hashbrown = { version = "0.8", features = ["serde"] }
thiserror = "1.0.13"
parking_lot = "0.11.0"
derive_builder = "0.9.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
shadow-clone = "1.2.1"
stop-handle = "0.1"
serde = { version = "1.0.105", features = ["derive"] }
bincode = "1.3.1"
object-pool = "0.5.3"
anyhow = "1.0.33"
trust-dns-resolver = "0.19.5"
lru_time_cache = "0.11.0"
sys-info = "0.7"
rand_xoshiro = "0.4.0"
rand = "0.7.3"
itertools = "0.9.0"
tls-parser = "0.9.2"
nom = "^5.0"
seahash = { git = "https://gitlab.redox-os.org/redox-os/seahash.git" }

exogress-server-common = { path = "../common" }
exogress-common = { path = "../../deps/exogress", version = "0.0.1-beta", features = ["common-utils"] }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9"
