[package]
name = "exogress-director"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@exogress.com>"]
edition = "2018"

[dependencies]
bytes = "0.5"
clap = "2.33.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
futures = "0.3"
sentry = "0.21.0"
hashbrown = { version = "0.9", features = ["serde"] }
thiserror = "1.0.13"
parking_lot = "0.11.0"
derive_builder = "0.9.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
shadow-clone = "1.2.1"
stop-handle = "0.1"
serde = { version = "1.0.105", features = ["derive"] }
bincode = "1.3.1"
object-pool = "0.5.3"
anyhow = "1.0.33"
lru_time_cache = "0.11.0"
sys-info = "0.7"
rand_xoshiro = "0.6.0"
rand = "0.8"
itertools = "0.9.0"
tls-parser = "0.9.2"
nom = "^5.0"
seahash = { git = "https://gitlab.redox-os.org/redox-os/seahash.git" }

trust-dns-resolver = {  git = "https://github.com/bluejekyll/trust-dns.git", branch = "main" }

exogress-server-common = { path = "../common" }
exogress-common = { path = "../../deps/exogress", version = "0.0.1-beta", features = ["common-utils"], default-features = false }

[dev-dependencies]
quickcheck = "0.9.2"
quickcheck_macros = "0.9"
