[package]
name = "exogress-director"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@exogress.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
clap = "2.33.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "net", "time"] }
futures = "0.3"
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow"] }
hashbrown = { version = "0.9", features = ["serde"] }
thiserror = "1.0.13"
parking_lot = "0.11.0"
derive_builder = "0.9.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
shadow-clone = "1.2.1"
stop-handle = "0.1"
serde = { version = "1.0.105", features = ["derive"] }
bincode = "1.3.1"
object-pool = "0.5.3"
anyhow = "1.0.33"
lru_time_cache = "0.11.0"
sys-info = "0.7"
rand_xoshiro = "0.6.0"
rand = "0.8"
itertools = "0.10.0"
tls-parser = "0.10"
nom = "^6.0"
seahash = "4.1"
prometheus = "0.11.0"
lazy_static = "1.4.0"
trust-dns-resolver = "0.20"
mimalloc = "0.1.22"
warp = { git = "https://github.com/seanmonstar/warp.git", branch = "master", features =["websocket", "tls", "compression"] }

exogress-server-common = { path = "../common" }
exogress-common = { path = "../../deps/exogress", version = "0.0.1-beta", features = ["common-utils"], default-features = false }

[dev-dependencies]
quickcheck = "1.0"
quickcheck_macros = "1.0"
