[package]
name = "exogress-dns"
version = "0.9.4"
authors = ["Gleb Pomykalov <gleb@exogress.com>"]
edition = "2018"

[dependencies]
bytes = "1.0"
clap = "2.33.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "net", "time", "parking_lot"] }
futures = "0.3"
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow", "contexts", "rustls", "reqwest"], default-features=false }
hashbrown = { version = "0.11", features = ["serde"] }
thiserror = "1.0.13"
parking_lot = "0.11.0"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
shadow-clone = "1.2.1"
stop-handle = "0.1"
seahash = "4.1"
serde = { version = "1.0.105", features = ["derive"] }
anyhow = "1.0.33"
rand = "0.8"
lru_time_cache = "0.11.0"
itertools = "0.10.0"
prometheus = "0.12.0"
lazy_static = "1.4.0"
trust-dns-resolver = "0.20"
trust-dns-server = { version = "0.20", features = ["dnssec-ring"] }
warp = { version = "0.3", features =["websocket", "tls", "compression"] }
jemallocator = "0.3.2"
url = "2"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "trust-dns", "stream", "gzip", "brotli"], default-features = false }
geo = "0.18.0"
serde_json = "1.0.64"
weighted-rs = "0.1.2"
smol_str = "0.1.17"

exogress-server-common = { path = "../common", features = ["geoip"] }
exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.1.0", features = ["common-utils"], default-features = false }
