[package]
name = "exogress-gateway"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
sentry = "0.21.0"
hashbrown = { version = "0.8", features = ["serde"] }
thiserror = "1.0.13"
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"] }
serde_derive = "1.0.25"
serde_yaml = "0.8.13"
clap = "2.33.3"
tokio = { version = "0.2", features = ["rt-threaded", "macros", "signal", "fs", "tcp", "sync", "time"] }
futures = "0.3"
futures-util = { version = "0.3", features = ["io"] }
chrono = "0.4.11"
hyper = "0.13.9"
http = "0.2.1"
reqwest = { version = "0.10.6", features = ["gzip", "brotli", "trust-dns", "native-tls", "stream", "rustls-tls"] }
bytes = "0.5"
warp = { version = "=0.2.5", features = ["websocket", "tls", "compression"] }
url = "2.1.1"
lru_time_cache = "0.11.0"
parking_lot = {version = "0.11", features = [] }
nonzero_ext = "0.2.0"
rand = { version = "0.7", features = ["small_rng"] }
stop-handle = "0.1"
lazy_static = "1.4.0"
sha2 = "0.8.1"
tokio-tungstenite = { version = "0.11", features = ["stream"] }
tungstenite = "0.11.1"
trust-dns-resolver = "0.19.5"
httparse = "1.3.4"
tokio-util = { version = "0.3.1", features = ["compat"] }
patricia_tree = "0.2.0"
cookie = "0.13.3"
time = "0.2.15"
futures-intrusive = "0.3.1"
maxminddb = { version = "0.14.0", features = ["mmap"] }
memmap = "0.7.0"
progress_bar = "0.1.3"
tempfile = "3.1.0"
percent-encoding = "2.1.0"
tokio-rustls = "0.14.0"
serde_qs = "0.5.2"
serde_with = "1.5.0"
tower = "0.3.1"
byteorder = "1.3.4"
smallvec = { version = "1.4.1", features = ["serde"] }
anyhow = "1.0.31"
bincode = "1.3.1"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
itertools = "0.9.0"
tokio-either = "0.1.4"
prometheus = "0.10.0"
governor = "0.3.1"
oauth2 = { version = "3.0.0", default-features = false, features = ["reqwest-010", "futures-03"] }
jsonwebtoken = "7.2.0"
typed-headers = "0.2.0"
mime = "0.3.16"
async-compression = { version = "0.3.5", features = ["gzip", "futures-write", "stream", "brotli"]}
handlebars = "3.5.0"
globset = { version = "0.4.5", features = ["serde1"] }
maplit = "1.0.2"
http-serde = "1.0.1"
tls-parser = "0.9.2"
nom = "^5.0"
pin-utils = "0.1.0"
object-pool = "0.5.3"
mimalloc = "0.1.22"
dashmap = { version = "3.11.10", features = ["hashbrown"] }
rustls-native-certs = "0.4.0"

exogress-server-common = { path = "../common", version = "0.1" }
exogress-assistant = { path = "../assistant", version = "0.1" }
exogress-common-utils = { path = "../../deps/exogress/crates/common-utils", version = "0.1" }
exogress-tunnel = { path = "../../deps/exogress/crates/tunnel", version = "0.1" }
exogress-config-core = { path = "../../deps/exogress/crates/config-core", version = "0.1" }
exogress-entities = { path = "../../deps/exogress/crates/entities", version = "0.1" }
exogress-signaling = { path = "../../deps/exogress/crates/signaling", version = "0.1" }
