[package]
name = "exogress-gateway"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
sentry = "0.21.0"
hashbrown = { version = "0.9", features = ["serde"] }
thiserror = "1.0.13"
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"] }
serde_derive = "1.0.25"
serde_yaml = "0.8.13"
clap = "2.33.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "fs", "net", "sync", "time"] }
futures = "0.3"
futures-util = { version = "0.3", features = ["io"] }
chrono = "0.4.11"
hyper = "0.14"
http = "0.2.1"
http-1 = { version = "0.1", package = "http" }
bytes = "1.0"
url = "2.1.1"
lru_time_cache = "0.11.0"
parking_lot = { version = "0.11", features = [] }
rand = { version = "0.8" }
stop-handle = "0.1"
lazy_static = "1.4.0"
sha2 = "0.9"
httparse = "1.3.4"
patricia_tree = "0.3.0"
cookie = "0.14"
time = "0.2.15"
futures-intrusive = "0.4"
maxminddb = { version = "0.17.0", features = ["mmap"] }
memmap = "0.7.0"
progress_bar = "0.1.3"
tempfile = "3.1.0"
percent-encoding = "2.1.0"
serde_qs = "0.8"
byteorder = "1.3.4"
smallvec = { version = "1.6", features = ["serde"] }
anyhow = "1.0.31"
bincode = "1.3.1"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
itertools = "0.10.0"
prometheus = "0.11.0"
oauth2 = { version = "3.0.0", default-features = false, features = ["futures-03"] }
jsonwebtoken = "7.2.0"
typed-headers = "0.2.0"
mime = "0.3.16"
handlebars = "3.5.0"
globset = { version = "0.4.5", features = ["serde1"] }
maplit = "1.0.2"
http-serde = "1.0.1"
pin-utils = "0.1.0"
mimalloc = "0.1.22"
dashmap = { version = "4.0.1" }
smol_str = { version = "0.1.17", features = ["serde"] }
weighted-rs = "0.1.2"
magick_rust = "0.14.0"
rusty-s3 = "0.1.0"
tame-gcs = "0.8.1"
tame-oauth = "0.4.5"
tokio-stream = { version = "0.1.0" }
failure = "0.1.8"
redis = {version = "0.19.0", default-features = false, features = ["tokio", "tokio-comp", "connection-manager"]}
seahash = { git = "https://gitlab.redox-os.org/redox-os/seahash.git" }
bs58 = "0.3.1"
byte-unit = { version = "4.0.9", features = ["serde"] }
sodiumoxide = "0.2.6"
hex = "0.4.2"

rustls-native-certs = "0.5"
async-compression = { version = "0.3.7", features = ["gzip", "futures-write", "brotli", "deflate"] }

tokio-rustls = "0.22"
tokio-tungstenite = { version = "0.13", features = ["stream"] }
tokio-util = { version = "0.6", features = ["compat", "io"] }
trust-dns-resolver = "0.20"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "trust-dns", "stream", "gzip", "brotli"] }
warp = { git = "https://github.com/aknuds1/warp.git", branch = "chore/upgrade-tokio", features =["websocket", "tls", "compression"] }

exogress-server-common = { path = "../common", version = "0.1" }
exogress-common = { path = "../../deps/exogress", version = "0.0.1-beta", features = ["common-utils", "tunnel", "config-core", "entities", "signaling", "ws-client"], default-features = false }

