[package]
name = "exogress-gateway"
version = "0.3.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
aho-corasick = "0.7.15"
anyhow = "1.0.31"
async-compression = { version = "0.3.7", features = ["gzip", "futures-write", "brotli", "deflate"] }
async-stream = "0.3.0"
base64 = "0.13.0"
bincode = "1.3.1"
bs58 = "0.4"
byte-unit = { version = "4.0.9", features = ["serde"] }
byteorder = "1.3"
bytes = "1.0"
chrono = "0.4.11"
clap = "2.33.3"
cookie = "0.14"
dashmap = { version = "4.0.1" }
etag = "2.0.5"
futures = "0.3"
futures-intrusive = "0.4"
futures-util = { version = "0.3", features = ["io"] }
globset = { version = "0.4.5", features = ["serde1"] }
handlebars = "3.5.0"
hashbrown = { version = "0.9", features = ["serde"] }
hex = "0.4.2"
http = "0.2.1"
http-serde = "1.0.1"
httparse = "1.3.4"
hyper = "0.14"
itertools = "0.10.0"
jsonwebtoken = "7.2.0"
langtag = { git = "https://github.com/glebpom/langtag.git", branch = "master" }
lazy_static = "1.4.0"
ledb = "0.4.0"
ledb-types = "0.4.0"
linked-hash-map = "0.5.4"
lru_time_cache = "0.11.0"
maplit = "1.0.2"
maxminddb = { version = "0.17.0", features = ["mmap"] }
memmap = "0.7.0"
mimalloc = "0.1.22"
mime = "0.3.16"
never = "0.1.0"
oauth2 = { version = "4.0.0-beta.1" }
parking_lot = { version = "0.11", features = ["serde"] }
percent-encoding = "2.1.0"
pin-utils = "0.1.0"
progress_bar = "0.1.3"
prometheus = "0.11.0"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1.4.3"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "trust-dns", "stream", "gzip", "brotli"] }
rustls-native-certs = "0.5"
rusty-s3 = "0.1.0"
seahash = "4.1"
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_derive = "1.0.25"
serde_json = "1.0.48"
serde_qs = "0.8"
serde_yaml = "0.8.13"
sha1 = "0.6"
sha2 = "0.9"
shadow-clone = "1.2.1"
smallvec = { version = "1.6", features = ["serde"] }
smol_str = { version = "0.1.17", features = ["serde"] }
sodiumoxide = "0.2.6"
stop-handle = "0.1"
tame-gcs = "0.9"
tame-oauth = "0.4.5"
tempfile = "3.1.0"
thiserror = "1.0.13"
time = "0.2.15"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "fs", "net", "sync", "time", "parking_lot"] }
tokio-rustls = "0.22"
tokio-stream = { version = "0.1.2" }
tokio-tungstenite = { version = "0.13", features = ["stream"] }
tokio-util = { version = "0.6", features = ["compat", "io"] }
tracing = "0.1"
tracing-subscriber = "0.2"
trust-dns-resolver = "0.20"
typed-headers = { git = "https://github.com/glebpom/typed-headers.git", branch = "master" }
url = "2.1.1"
warp = { version = "0.3", features = ["websocket", "tls", "compression"] }
weighted-rs = "0.1.2"
ttl_cache = "0.5.1"
rw-stream-sink = "0.2.1"

exogress-server-common = { path = "../common", features = ["crypto"] }
exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.0.1-beta", features = ["common-utils", "tunnel", "config-core", "entities", "signaling", "ws-client", "ledb"], default-features = false }

