[package]
name = "exogress-signaler"
version = "0.1.0"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
tokio = { version = "0.2.21", features = ["tcp", "time", "signal"] }
futures = "0.3.5"
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"] }
serde_derive = "1.0.25"
thiserror = "1.0.13"
sentry = "0.21.0"
trust-dns-resolver = "0.19.5"
rand = { version = "0.7" }
stop-handle = "0.1"
pin-project = "0.4"
http = "0.2"
hostname = "0.3.1"
byteorder = "1.3.4"
redis = {version = "0.17.0", default-features = false, features = ["tokio-rt-core", "tokio-comp", "connection-manager"]}
clap = "2.33.3"
reqwest = {version ="0.10.6", features = ["rustls-tls", "json", "trust-dns"] }
lazy_static = "1.4.0"
warp = "0.2.5"
anyhow = "1.0.31"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
urlencoding = "1.1.1"
hashbrown = "0.9.1"

exogress-server-common = { path = "../common" }

exogress = { path = "../../deps/exogress", version = "0.0.1-beta", features = ["common-utils", "entities", "config-core", "signaling"] }
