[package]
name = "exogress-signaler"
version = "0.10.1"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "time", "signal", "macros", "parking_lot"] }
futures = "0.3.5"
serde_json = "1.0.48"
serde = { version = "1.0.105", features = ["derive"] }
serde_derive = "1.0.25"
thiserror = "1.0.13"
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow", "contexts", "rustls", "reqwest"], default-features=false }
rand = { version = "0.8" }
stop-handle = "0.1"
pin-project = "1.0"
http = "0.2"
hostname = "0.3.1"
byteorder = "1.3"
redis = {version = "0.20", default-features = false, features = ["tokio", "tokio-comp", "connection-manager"]}
clap = "2.33.3"
lazy_static = "1.4.0"
anyhow = "1.0.31"
shadow-clone = "1.2.1"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
urlencoding = "1.1.1"
hashbrown = "0.11"
prometheus = "0.12.0"
tokio-stream = { version = "0.1.2" }
jemallocator = "0.3.2"
itertools = "0.10"

trust-dns-resolver = "0.20"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "trust-dns"], default-features = false }
warp = { version = "0.3" }

exogress-server-common = { path = "../common" }

exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.2.0-beta.1", features = ["common-utils", "entities", "config-core", "signaling"], default-features = false }
