[package]
name = "exogress-transformer"
version = "0.9.2"
authors = ["Exogress Team <team@exogress.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
bytes = "1.0"
chrono = "0.4.11"
clap = "2.33.3"
futures = "0.3"
futures-util = { version = "0.3", features = ["io"] }
hashbrown = { version = "0.11", features = ["serde"] }
itertools = "0.10.0"
lazy_static = "1.4.0"
maplit = "1.0.2"
mimalloc = "0.1.22"
mime = "0.3.16"
parking_lot = { version = "0.11", features = ["serde"] }
pin-utils = "0.1.0"
prometheus = "0.12.0"
rand = { version = "0.8", features = ["small_rng"] }
sentry = { version = "0.22.0", features = ["backtrace", "panic", "anyhow"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_derive = "1.0.25"
serde_json = "1.0.48"
shadow-clone = "1.2.1"
smol_str = { version = "0.1.17", features = ["serde"] }
stop-handle = "0.1"
tempfile = "3.1.0"
thiserror = "1.0.13"
time = "0.2.15"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal", "fs", "net", "sync", "time", "parking_lot", "process"] }
tokio-stream = { version = "0.1.2" }
tokio-util = { version = "0.6", features = ["compat", "io"] }
tracing = "0.1"
tracing-subscriber = "0.2"
warp = { version = "0.3" }
trust-dns-resolver = "0.20"
futures-intrusive = "0.4"
mongodb = "2.0.0-alpha.1"
reqwest = { version = "0.11", features = ["rustls-tls", "json", "trust-dns", "stream"] }
rustls-native-certs = "0.5"
tame-gcs = "0.10"
bson = "1.1.0"
ulid = { version = "0.4.1", features = ["serde"] }
tame-oauth = "0.4.7"
http = "0.2.1"
lru_time_cache = "0.11.0"
sodiumoxide = "0.2.6"
url = "2.2.1"
base64 = "0.13.0"
parse-display = "0.4.1"
async-stream = "0.3.0"

exogress-server-common = { path = "../common", features = ["crypto"] }
exogress-common = { git = "https://github.com/exogress/exogress.git", branch = "master", version = "0.1.0", features = ["entities", "common-utils"], default-features = false }

